Closed Bug 1782365 Opened 3 years ago Closed 3 years ago

On the "Article not found" error page the "Remove All Expired Articles" button is still missing

Categories

(MailNews Core :: Networking: NNTP, defect)

Thunderbird 102
defect

Tracking

(thunderbird_esr102 fixed, thunderbird104 fixed)

RESOLVED FIXED
105 Branch
Tracking Status
thunderbird_esr102 --- fixed
thunderbird104 --- fixed

People

(Reporter: infofrommozilla, Assigned: rnons)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files, 1 obsolete file)

Attached image removeExpiredArt.png

Bug 1778229 has brought the page back, but the button to remove the expired items is still missing.

It's this button:
https://searchfox.org/comm-central/rev/18c2ea0afb88b6abbeb8429861f3eac9e7a2ec35/mailnews/base/content/newsError.xhtml#48

According to the inspector, the button is only set to hidden.

The cause of this lies here:

https://searchfox.org/comm-central/rev/18c2ea0afb88b6abbeb8429861f3eac9e7a2ec35/mailnews/base/content/newsError.js#29

  if ("f" in params) {
    folderUri = params.f;
  } else {
    document.getElementById("errorTryAgain").hidden = true;
  }

params content:

k: "201"
m: "tc3m2t.8bk.1@gammasigma.xy"
r: "no such article number in this group"
<prototype>: {…}

Indeed, no f

Thanks, this needs some more work than showing the button. I though ?list-ids was unused, will support it.

Assignee: nobody → remotenonsense
Status: NEW → ASSIGNED
Regressed by: nntp-js
Target Milestone: --- → 105 Branch

Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/d592397ca1fd
Support removing all expired NNTP articles. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED

Works fine in TB105.0a1.
Thaks for fixing it.

Should we lift this up like we did Bug 1778229?

Comment on attachment 9288213 [details]
Bug 1782365 - Support removing all expired NNTP articles. r=mkmelin

[Approval Request Comment]
Regression caused by (bug #): bug 1707550
User impact if declined: Can't remove all expired NNTP articles by clicking a button on newsError.xhtml
Testing completed (on c-c, etc.): c-c
Risk to taking this patch (and alternatives if risky): low

Attachment #9288213 - Flags: approval-comm-beta?

Comment on attachment 9288213 [details]
Bug 1782365 - Support removing all expired NNTP articles. r=mkmelin

[Triage Comment]
Approved for beta

Attachment #9288213 - Flags: approval-comm-beta? → approval-comm-beta+

This doesn't uplift to beta without bug 1781720. If we want it on c-esr102, it will need a new patch anyway.

Flags: needinfo?(remotenonsense)

Will request for esr102 directly after 105, thanks.

Flags: needinfo?(remotenonsense)

I'm currently on 102.1.2 (64-bit) on Windows 10.
What can I need to do to consume this fix?
a) wait until automatic update
b) install the following stable version ...
c) exchange file ... on OS with ...

Thank you in advance.

Attached patch 1782365-esr102.patch (obsolete) — Splinter Review

[Approval Request Comment]
Regression caused by (bug #): bug 1707550
User impact if declined: Can't remove all expired NNTP articles by clicking a button on newsError.xhtml
Testing completed (on c-c, etc.): beta
Risk to taking this patch (and alternatives if risky): low

Attachment #9291025 - Flags: approval-comm-esr102?

Comment on attachment 9291025 [details] [diff] [review]
1782365-esr102.patch

[Triage Comment]
Approved for esr102

Attachment #9291025 - Flags: approval-comm-esr102? → approval-comm-esr102+

[Triage Comment]
Updated esr102 patch with missing _logger in NntpChannel. Setting to approved based on prior approval for c-esr102.

Attachment #9291025 - Attachment is obsolete: true
Attachment #9292067 - Flags: approval-comm-esr102+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: