Bug 1782365 - Support removing all expired NNTP articles. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D153543

--HG--
extra : rebase_source : 6a4f1cd4ac47208e3e286194362d859bb1e62984